# vff_avoidance_cpp

./: CMakeLists.txt  README.md  package.xml
include/vff_avoidance/: avoidance_node.hpp
launch/: vff_launch.py
src/: vff_main.cpp
src/vff_avoidance/: avoidance_node.cpp
tests/: vff_test.cpp
